# sa-call-analyzer

./: .clauderc  .dockerignore  .env.example  .gitignore  ARIZE_GRANULARITY_GUIDE.md  ARIZE_UI_GUIDE.md  CLEANUP_SUMMARY.md  CREWAI_GUIDE.md  DEBUGGING_CHANGES.md  DEPLOYMENT.md  Dockerfile  INSTRUMENTATION.md  LOCAL_DEV.md  MINIMAL_PROCESSOR_APPROACH.md  Makefile  QUICKSTART.md  README.md  SPAN_PROCESSOR_GUIDE.md  TRACE_VALIDATION.md  TRACING_IMPROVEMENTS.md  bigquery_client.py  check_env.py  crew_analyzer.py  crew_callbacks.py  dev.sh  docker-compose.yml  gong_mcp_client.py  gong_mcp_enrichment.py  litellm_config.yaml  main.py  models.py  observability.py  poc_document_generator.py  prospect_timeline_analyzer.py  pyproject.toml  railway.json  recap_generator.py  span_processor_minimal.py  test_litellm.py  tracing_enhancements.py  (+2 more)
.cursor/rules/: vercel-plugin.mdc
.github/workflows/: ci.yml  deploy-api.yml  deploy-web.yml
apps/api/: .env.prod  .env.vercel  .vercelignore  arize_doc_links.py  bigquery_client.py  call_analysis_graph.py  call_analysis_llm.py  call_analysis_prompts.py  config.py  constraints.txt  crew_analyzer.py  crew_handlers.py  demo_generator.py  gong_mcp_client.py  gong_mcp_enrichment.py  main.py  model_routing.py  models.py  observability.py  openai_compat_completion.py  poc_document_generator.py  prospect_intel.py  pyproject.toml  requirements.txt  routes_crew.py  salesforce_client.py  slack_bot.py  span_processor_fixed.py  synthetic_demo_skill.py  transition_document_generator.py  vercel.json
apps/api-crew/: .gitignore  README.md  requirements.txt  vercel.json  vercel_install.sh
apps/api-crew-proxy/: requirements.txt  vercel.json
apps/api-crew-proxy/api/: index.py
apps/api-crew-vercel/: main.py  pyproject.toml  vercel.json
apps/api-crew/api/: index.py
apps/api/api/: index.py
apps/api/demo_templates/: env.example  generator_skeleton.py  gitignore  requirements.txt
apps/api/frontend/: index.html
apps/api/hypothesis_tool/: TRACE_FLOW.md  __init__.py  config.py  errors.py
apps/api/prompts/: classification.txt  compile_base.txt  sales_methodology.txt  technical.txt
apps/api/routes/: __init__.py  health.py  prospect.py  slack.py
apps/api/scripts/: check_doc_links.py  vercel_prune_site_packages.py
apps/gong-mcp/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vercel.json
apps/gong-mcp/api/: call-info.ts  calls.ts  health.ts  transcript.ts
apps/gong-mcp/lib/: gong.ts  http.ts
apps/gong-mcp/public/: index.html
apps/gong-mcp/scripts/: ensure-public.mjs
apps/web/: .env.vercel-check  .env.web  .gitignore  README.md  eslint.config.mjs  instrumentation.ts  middleware.ts  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo  vercel.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: AccountAutocompleteInput.tsx  AccountSuggestModal.tsx  DemoTab.tsx  EasterEggs.tsx  GongTab.tsx  HypothesisTab.tsx  LoadingCard.tsx  PipelineTab.tsx  PocPotTab.tsx  PocTab.tsx  ProspectIntelPanel.tsx  ProspectTab.tsx  ResultsCard.tsx  SalesStageRail.tsx  ShareToolbar.tsx  TransitionTab.tsx  UsageAchievements.tsx
apps/web/lib/: accountResolve.ts  api.ts  backendOrigin.ts  clientCache.ts  shareableUrl.ts  types.ts  useDemoForm.ts
arize_demo_traces/: cost_guard.py  eval_wrapper.py  exporter.py  llm.py  models.py  online_evals.py  synthesizer.py  trace_enrichment.py  tracing_setup.py
arize_demo_traces/runners/: chatbot.py  common_runner_utils.py  generic.py  rag.py  registry.py  text_to_sql.py
arize_demo_traces/runners/adk/: chatbot.py  classification.py  generic.py  guardrails.py  mcp.py  multi_agent.py  multimodal.py  rag.py  text_to_sql.py  travel_agent.py
arize_demo_traces/runners/crewai_fw/: chatbot.py  classification.py  generic.py  guardrails.py  mcp.py  multi_agent.py  multimodal.py  rag.py  text_to_sql.py  (+1 more)
arize_demo_traces/use_cases/: chatbot.py  classification.py  common.py  contracts.py  generic.py  guardrails.py  mcp.py  multi_agent.py  multimodal.py  rag.py  text_to_sql.py  travel_agent.py
docs/: GONG_INTEGRATION.md  SA_EVALUATION_RUBRIC.md  deploy-vercel.md  vercel-new-projects.md
examples/: README.md  guardrails_bedrock.py
frontend/: index.html
gong-http-server/: Dockerfile  server.py
gong-http-server/mcp-server/: package.json
hypothesis_tool/: config.py  database.py  tracing.py
hypothesis_tool/agents/: __init__.py  research_agent.py
hypothesis_tool/analyzers/: __init__.py  signal_extractor.py
hypothesis_tool/clients/: arize_prompt_client.py  bigquery_client.py  brave_client.py  page_fetcher.py
hypothesis_tool/data/: value_drivers.json
hypothesis_tool/engines/: hypothesis_engine.py
hypothesis_tool/models/: feedback.py  hypothesis.py  playbook.py
infra/: docker-compose.yml
infra/gong-http-server/: requirements.txt  server.py
infra/k8s/: configmap.yaml  deployment.yaml  gong-deployment.yaml  ingress.yaml  litellm-configmap.yaml  litellm-secret.yaml.example  litellm-service.yaml  namespace.yaml  secret.yaml.example
infra/litellm/: config.yaml
infra/scripts/: down-pods.sh  down.sh  up-pods.sh  up.sh
k8s/: deployment.yaml  gong-deployment.yaml  gong-secret.yaml.example  gong-service.yaml  litellm-deployment.yaml  service.yaml
litellm/: Dockerfile  config.yaml
scripts/: check_fy_events.py  check_timestamps.py  daily_active_users.py  down-pods.sh  down.sh  enterprise_name_match.py  enterprise_usage_report.py  enterprise_usage_report_full.py  explore_enterprise_data.py  explore_enterprise_data2.py  explore_pendo_match.py  generate_customer_script.py  patch_arize_docx_links.py  up.sh  vercel-deploy-arize-ai.sh
templates/poc_pot/: poc_saas.docx  pot.docx
tests/: conftest.py  test_api_analyze.py  test_api_health.py  test_api_hypothesis_research.py  test_arize_demo_conformance.py  test_models_call_analysis.py  test_models_hypothesis.py  test_performance.py  test_signal_extractor.py
web/: README.md  instrumentation.ts  package-lock.json
web/app/: layout.tsx
web/components/: DemoTab.tsx  ProspectTab.tsx
web/lib/: api.ts  helpers.ts
(+75 files in other folders)
